# rss-read-kun

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md
.github/workflow/: pull_request.yml
.github/workflows/: pull_request.yml  push_main.yml
scripts/: encoding.js
src/: http_client.rs  main.rs  mod.rs  rss_summary.rs
src/application/: discord_service.rs  mod.rs  rss_summary.rs  rss_summary_service.rs
src/application/use_case/: fetch_and_summarize.rs  mod.rs
src/domain/: ai_service.rs  mod.rs  notification.rs  rss_data.rs  rss_summary.rs
src/domain/event/: mod.rs  rss_events.rs
src/domain/model/: mod.rs
src/domain/repository/: rss_repository.rs
src/domain/rss_summary/: error.rs  mod.rs  model.rs  service.rs
src/infrastructure/: http_client.rs  mod.rs
src/infrastructure/discord/: mod.rs  notification_service.rs
src/infrastructure/event/: in_memory_event_publisher.rs  mod.rs
src/infrastructure/gemini/: ai_service.rs  mod.rs  request.rs  response.rs
src/infrastructure/repository/: http_rss_repository.rs  mod.rs
src/model/: embed.rs  gemini_request.rs  gemini_response.rs  mod.rs  rss_data.rs  rss_summary.rs
src/presentation/http/: handlers.rs
