[package]
name = "rss-read-kun"
version = "0.1.0"
authors = ["tminasen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.5"
tokio = { version = "1.4.0", features = ["time"] }
reqwest = { version = "0.11.0", features = ["json"] }
rss = "1.10.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
