[package]
name = "rss-read-kun"
version = "0.1.0"
authors = ["tminasen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", features = ["json"] }
rss = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
log = "0.4.27"
env_logger = "0.11.3"
